--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
     <link rel="stylesheet" type="text/css" href="css/jquery.fileupload.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.fileupload-ui.css">
+
+      <!-- <script src="./js/library/jquery.js"></script> -->
+
+      <script src="./js/library/load-image.js"></script>
+      <script src="./js/library/load-image-meta.js"></script>
+      <script src="./js/library/load-image-exif.js"></script>
   </head>
   <body>
     <section id="react"></section>
